@@ -1,3 +1,7 @@
+[B]Version 2.8.0[/B]
+
+- initial Queue & Subscription support
+
 [B]Version 2.7.9[/B]
 
 - fixed incorrect directory total for some searches
